# api/web/docs/swagger.json
@@ -183,6 +183,24 @@
                 ]
             }
         },
+        "/driver/order/active": {
+            "get": {
+                "tags": [
+                    "User Order"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success response"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": [],
+                        "OAuth2": []
+                    }
+                ]
+            }
+        },
         "/driver/order/{id}": {
             "get": {
                 "tags": [
